# trading-research

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled.ipynb  app.py  best_model.h5  docker-compose.yml  enhanced_model.h5  fetch_data.ipynb  fetch_data.py  minimal_features.py  ml-requirements.txt  production_config.json  pyproject.toml  pytest.ini  requirements.txt  returns.db  run_ml_api.py  simple_training.py  test_lstm_pattern_detection.py  test_model_compatibility.py
.virtual_documents/: Untitled.ipynb
alembic/: env.py
api/: models.py
config/: config.py  development.yaml  production.yaml  production_config.json  quick_test_config.json
database/: __init__.py  schema.py
documentation/: ARCHITECTURE.md  LSTM_ARCHITECTURE.md  STRATEGY_FRAMEWORK.md  SYSTEM_OVERVIEW.md  TESTING_INFRASTRUCTURE.md  TRAINING_SYSTEMS.md
frontend/: package-lock.json  package.json
ml/: .gitignore  Dockerfile  README.md  single-ticker-model.py  test-enviorment.py
ml_api/: __init__.py  app.py  model_manager.py  models.py
pipeline/: fetch_data.py  load.py  run.py  transform.py
scripts/: advanced_feature_selection_demo.py  analyze_model_predictions.py  architecture_validation.py  check_data_volume.py  comprehensive_training_script.py  comprehensive_validation.py  correlation_validation_script.py  feature_selection_demo.py  investigate_data_leakage.py  pattern_learning_validation_script.py  production_pipeline.py  progressive_model_validation.py  run_lstm_training.py  run_lstm_validation.py  run_production_pipeline.py  run_validation_tests.py  (+2 more)
(+174 files in other folders)
